Agregar contenido en Novedades y Mapeo con sus CSS y JS para el funcionamiento del filtro, y también imágenes.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <nav id="mainNav">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="/EMPRENDO/pages/programas.html">Programas</a></li>
-          <li><a href="/EMPRENDO/pages/novedades.html">Novedades</a></li>
-          <li><a href="/EMPRENDO/pages/mapeo.html">Mapeo</a></li>
-          <li><a href="/EMPRENDO/pages/contacto.html">Contacto</a></li>
-          <li><a href="/EMPRENDO/pages/login.html">Inscripción</a></li>
+          <li><a href="/pages/programas.html">Programas</a></li>
+          <li><a href="/pages/novedades.html">Novedades</a></li>
+          <li><a href="/pages/mapeo.html">Mapeo</a></li>
+          <li><a href="/pages/contacto.html">Contacto</a></li>
+          <li><a href="/pages/login.html">Inscripción</a></li>
         </ul>
       </nav>
     </header>
