--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -15,11 +15,11 @@
       <nav id="mainNav">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="/EMPRENDO/pages/programas.html">Programas</a></li>
-          <li><a href="/EMPRENDO/pages/novedades.html">Novedades</a></li>
-          <li><a href="/EMPRENDO/pages/mapeo.html">Mapeo</a></li>
-          <li><a href="/EMPRENDO/pages/contacto.html">Contacto</a></li>
-          <li><a href="/EMPRENDO/pages/login.html">Inscripción</a></li>
+          <li><a href="/pages/programas.html">Programas</a></li>
+          <li><a href="/pages/novedades.html">Novedades</a></li>
+          <li><a href="/pages/mapeo.html">Mapeo</a></li>
+          <li><a href="/pages/contacto.html">Contacto</a></li>
+          <li><a href="/pages/login.html">Inscripción</a></li>
         </ul>
       </nav>
     </header>
@@ -27,15 +27,19 @@
       Mantente al día con las últimas noticias y eventos.
     </h1>
     <!-- Contenido principal -->
-    <div class="registro-evento">
+    
+    <main>
+      <div class="registro-evento">
       <h2>Inscríbete</h2>
       <p>
         Regístrate para participar de nuestro próximo Mega Evento exclusivo para
         emprendedores.
       </p>
-      <button class="btn-formEvento" id="btnRegistroEvento">Inscribirse</button>
+    
+      <a href="/pages/inscripcion.html" class="btn-inscripcion">
+            Inscribirme
+          </a>
     </div>
-    <main>
       <section id="novedades">
         <h2>Novedades</h2>
         <p>
