Se subieron archivos js y la pagina de Programas con sus imágenes

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <div class="logo-menu">
-        <span class="logo">Emprendo</span>
+      <div class="header">
+        <img src="../assets/img/emprendo-logo-blanco.png" id="logo-emprendo" />
         <button class="menu-toggle" id="menuToggle">&#9776;</button>
       </div>
       <nav id="mainNav">
@@ -19,7 +19,7 @@
           <li><a href="/pages/novedades.html">Novedades</a></li>
           <li><a href="/pages/mapeo.html">Mapeo</a></li>
           <li><a href="/pages/contacto.html">Contacto</a></li>
-          <li><a href="/pages/login.html">Inscripción</a></li>
+          <li><a href="/pages/formularioRegistro.html">Inscripción</a></li>
         </ul>
       </nav>
     </header>
@@ -27,19 +27,19 @@
       Mantente al día con las últimas noticias y eventos.
     </h1>
     <!-- Contenido principal -->
-    
+
     <main>
       <div class="registro-evento">
-      <h2>Inscríbete</h2>
-      <p>
-        Regístrate para participar de nuestro próximo Mega Evento exclusivo para
-        emprendedores.
-      </p>
-    
-      <a href="/pages/inscripcion.html" class="btn-inscripcion">
-            Inscribirme
-          </a>
-    </div>
+        <h2>Inscríbete</h2>
+        <p>
+          Regístrate para participar de nuestro próximo Mega Evento exclusivo
+          para emprendedores.
+        </p>
+
+        <a href="/pages/formularioRegistro.html" class="btn-inscripcion">
+          Inscribirme
+        </a>
+      </div>
       <section id="novedades">
         <h2>Novedades</h2>
         <p>
@@ -82,8 +82,12 @@
         >
       </p>
       <p>Realizado por GRUPO 10</p>
-      <img src="../assets/img/Grupo_10.PNG" alt="Logo Grupo 10" />
+      <img
+        src="../assets/img/Grupo_10.PNG"
+        alt="Logo Grupo 10"
+        style="width: 110px"
+      />
     </footer>
-    <script src="../js/script.js"></script>
+    <script src="../js/scriptNovedades.js"></script>
   </body>
 </html>
