--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <div class="logo-menu">
-        <span class="logo">Emprendo</span>
+      <div class="header">
+        <img src="assets/img/emprendo-logo-blanco.png" id="logo-emprendo" />
         <button class="menu-toggle" id="menuToggle">&#9776;</button>
       </div>
       <nav id="mainNav">
@@ -19,66 +19,85 @@
           <li><a href="/pages/novedades.html">Novedades</a></li>
           <li><a href="/pages/mapeo.html">Mapeo</a></li>
           <li><a href="/pages/contacto.html">Contacto</a></li>
-          <li><a href="/pages/login.html">Inscripción</a></li>
+          <li><a href="/pages/formularioRegistro.html">Inscripción</a></li>
         </ul>
       </nav>
     </header>
-    <h1 class="titulo-descripcion">
-      Un Futuro diferente nos espera y apostamos al nuevo Emprendedor 
-      para crearlo juntos.
-    </h1>
-    <!-- Contenido principal -->
     <main>
-      <h1>Bienvenido a Emprendo</h1>
-      <p>Tu plataforma para iniciar y gestionar tu propio negocio.</p>
-      <section id="features">
-        <h2>Características</h2>
-        <ul>
-          <li>Recursos para emprendedores</li>
-          <li>Programas de formación</li>
-          <li>Noticias y novedades</li>
-          <li>Mapeo de recursos locales</li>
-          <li>Soporte y contacto</li>
-          <li>Acceso a la comunidad</li>
-        </ul>
-      </section>
+      <!-- Sección Hero -->
+      <section class="hero"></section>
+      <!-- Contenido principal -->
+      <!-- SECCIÓN ABOUT -->
+      <section class="about">
+        <div class="about-container">
+          <div class="about-img">
+            <img
+              src="assets/img/grupoDeEmprendedores.png"
+              alt="Grupo de emprendedores"
+            />
+          </div>
+          <div class="about-text">
+            <h4>Sobre Nosotros</h4>
+            <p>
+              Emprendo es una plataforma dedicada a apoyar a emprendedores en su
+              camino hacia el éxito.
+            </p>
+            <p>
+              Ofrecemos recursos, formación y una comunidad activa para ayudarte
+              a alcanzar tus metas.
+            </p>
+            <div class="divider"></div>
 
-      <section id="about">
-        <h2>Sobre Nosotros</h2>
-        <p>
-          Emprendo es una plataforma dedicada a apoyar a emprendedores en su
-          camino hacia el éxito. Ofrecemos recursos, formación y una comunidad
-          activa para ayudarte a alcanzar tus metas.
+            <a href="pages/programas.html" class="btn-inscripcion"
+              >Accedé a nuestros programas</a
+            >
+          </div>
+        </div>
+      </section>
+      <!-- Sección de Programas -->
+
+      <section class="programas-seccion-inicio">
+        <div class="titulo-programas">
+          <h2>PROGRAMAS PARA CADA <span>ETAPA DE LA VIDA</span></h2>
+        </div>
+        <p class="descripcion-programas-inicio">
+          Nuestras dos áreas de trabajo integran distintos públicos objetivos
+          con el fin de brindar<br />
+          <strong
+            >herramientas para la innovación y atender las necesidades de los
+            emprendedores</strong
+          >
+          en cada momento de su desarrollo.
         </p>
+
+        <div class="contenedor-programas-inicio">
+          <div class="programa">
+            <img src="./assets/img/innovacion360.png" alt="Innovación 360" />
+            <div class="etiqueta naranja">
+              <p>
+                <strong>Innovación<br />360</strong>
+              </p>
+            </div>
+          </div>
+
+          <div class="programa">
+            <img
+              src="./assets/img/emprendedor.png"
+              alt="El nuevo emprendedor"
+            />
+            <div class="etiqueta verde">
+              <p>
+                <strong>El nuevo<br />EMPRENDEDOR</strong>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div style="margin-top: 2rem">
+          <a href="pages/programas.html" class="btn-inscripcion"
+            >Accedé a nuestros programas</a
+          >
+        </div>
       </section>
-<!-- Sección de Programas -->
-<section class="programas-seccion-inicio">
-  <div class="titulo-programas">
-    <h2>PROGRAMAS PARA CADA <span>ETAPA DE LA VIDA</span></h2>
-  </div>
-  <p class="descripcion-programas-inicio">
-    Nuestras dos áreas de trabajo integran distintos públicos objetivos con el fin de brindar<br>
-    <strong>herramientas para la innovación y atender las necesidades de los emprendedores</strong> en cada momento de su desarrollo.
-  </p>
-
-  <div class="contenedor-programas-inicio">
-    <div class="programa">
-      <img src="./assets/img/innovacion360.png" alt="Innovación 360">
-      <div class="etiqueta naranja">
-        <p><strong>Innovación<br>360</strong></p>
-      </div>
-    </div>
-
-    <div class="programa">
-      <img src="./assets/img/emprendedor.png" alt="El nuevo emprendedor">
-      <div class="etiqueta verde">
-        <p><strong>El nuevo<br>EMPRENDEDOR</strong></p>
-      </div>
-    </div>
-  </div>
-</section>
-
-
     </main>
     <footer>
       <p>&copy; 2025 Emprendo. Todos los derechos reservados.</p>
@@ -97,11 +116,15 @@
         >
       </p>
       <p>Realizado por GRUPO 10</p>
-      <img src="assets/img/Grupo_10.PNG" alt="Logo Grupo 10" />
+      <img
+        src="assets/img/Grupo_10.PNG"
+        alt="Logo Grupo 10"
+        style="width: 110px"
+      />
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
