--- a/pages/mapeo.html
+++ b/pages/mapeo.html
@@ -5,16 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Empresas</title>
     <link rel="stylesheet" href="../css/styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <!-- Header -->
     <header>
-      <div class="logo-menu">
-        <span class="logo">Emprendo</span>
+      <div class="header">
+        <img src="../assets/img/emprendo-logo-blanco.png" id="logo-emprendo" />
         <button class="menu-toggle" id="menuToggle">&#9776;</button>
       </div>
       <nav id="mainNav">
@@ -24,13 +20,15 @@
           <li><a href="/pages/novedades.html">Novedades</a></li>
           <li><a href="/pages/mapeo.html">Mapeo</a></li>
           <li><a href="/pages/contacto.html">Contacto</a></li>
-          <li><a href="/pages/login.html">Inscripción</a></li>
+          <li><a href="/pages/formularioRegistro.html">Inscripción</a></li>
         </ul>
       </nav>
     </header>
-    <h1 class="titulo-descripcion">
+
+    <h1 class="titulo-descripcionMapeo">
       Descubrí las empresas más innovadoras y disruptivas del país.
     </h1>
+
     <!-- Contenido principal -->
     <main class="empresas-container">
       <!-- Filtros a la izquierda -->
@@ -50,15 +48,24 @@
 
         <div class="contenedor-aside">
           <h4>Sumá tu Startup</h4>
-         
-            <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
-<dotlottie-wc src="https://lottie.host/bf50fd37-09ae-406d-bc90-9904bf867956/yvfSwoOtRC.lottie" style="width: 180px;height: 180px" speed="1" autoplay loop></dotlottie-wc>
-         
+
+          <script
+            src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js"
+            type="module"
+          ></script>
+          <dotlottie-wc
+            src="https://lottie.host/bf50fd37-09ae-406d-bc90-9904bf867956/yvfSwoOtRC.lottie"
+            style="width: 180px; height: 180px"
+            speed="1"
+            autoplay
+            loop
+          ></dotlottie-wc>
+
           <p>
             Si sos una startup innovadora y querés sumarte a nuestro mapeo,
             contactanos y completá el formulario.
           </p>
-          <a href="/pages/contacto.html" class="btn btn-primary">
+          <a href="/pages/contacto.html" class="btn btn-inscripcion">
             Postular mi Startup
           </a>
         </div>
@@ -70,7 +77,7 @@
             empresas más innovadoras y conectá con inversores y mentores.
             Participá de charlas, paneles y networking.
           </p>
-          <a href="/pages/inscripcion.html" class="btn btn-primary">
+          <a href="/pages/formularioRegistro.html" class="btn btn-inscripcion">
             Completar Inscripción
           </a>
         </div>
@@ -80,23 +87,23 @@
       <section class="tarjetas-empresas" id="empresasGrid">
         <div class="cards">
           <div class="card finTech">
-            <img src="../assets/img/koibanx.png" />
+            <img src="/assets/img/koibanx.png" />
           </div>
           <div class="card agTech">
-            <img src="../assets/img/michroma.png" />
+            <img src="/assets/img/michroma.png" />
           </div>
           <div class="card finTech">
-            <img src="../assets/img/mobbex.png" />
+            <img src="/assets/img/mobbex.png" />
           </div>
 
           <div class="card finTech">
-            <img src="../assets/img/123Seguro.png" />
+            <img src="/assets/img/123Seguro.png" />
           </div>
           <div class="card otras">
-            <img src="../assets/img/kigui.png" />
+            <img src="/assets/img/kigui.png" />
           </div>
           <div class="card finTech">
-            <img src="../assets/img/kimber.png" />
+            <img src="/assets/img/kimber.png" />
           </div>
 
           <div class="card otras">
@@ -211,9 +218,12 @@
         <a href="terminos.html">Términos de Servicio</a>
       </p>
       <p>Realizado por GRUPO 10</p>
-      <img src="../assets/img/Grupo_10.PNG" alt="Logo Grupo 10" />
+      <img
+        src="../assets/img/Grupo_10.PNG"
+        alt="Logo Grupo 10"
+        style="width: 110px"
+      />
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/script.js"></script>
   </body>
 </html>
